@@ -1,3 +1,9 @@
+2020-05-22 Riccardo Mottola <rm@gnu.org>
+
+	* DBFileWriter.h
+	* DBFileWriter.m
+	new formatSObject: method for formatting specific SObject complex object.
+
 2020-02-12 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoapCSV.m
@@ -21,7 +27,7 @@
 
 	* DBSoapCSV.m
         Fix autorelease issues inside the loop with Query Locator.
-        
+
         * DBSoap+Selecting.m
         Clean up memory management of GWSService a little.
 
